Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6, 10.11, 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
Description
The attached test case provided by mleich rather easily reproduces an assertion failure related to the change buffer, on all server versions 10.6 through 10.11.
The involved code was refactored as part of MDEV-27058, but it is yet unclear if this failure is a regression starting with 10.6.
The change buffer was disabled by default in MDEV-27734, deprecated in MDEV-27735, and i t is scheduled for removal in MDEV-29694. With MDEV-29694 present, the test will not crash.
The assertion fails with various stack traces, related to buffering purge operations (not inserts or delete-mark operations).
Attachments
Issue Links
- relates to
-
MDEV-26917 InnoDB: Clustered record for sec rec not found index
-
- Closed
-
-
MDEV-27058 Buffer page descriptors are too large
-
- Closed
-
-
MDEV-27734 Set innodb_change_buffering=none by default
-
- Closed
-
-
MDEV-27735 Deprecate the parameter innodb_change_buffering
-
- Closed
-
-
MDEV-29694 Remove the InnoDB change buffer
-
- Closed
-